--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^2.6.11",
     "vue-crono": "^2.0.9",
     "vue-router": "^3.2.0",
+    "vue-select": "^3.11.2",
     "vuex": "^3.4.0",
     "vuex-persist": "^3.1.3"
   },
