--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "GuateMusica",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,7 +9,9 @@
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
-    "deploy": "npm run electron:build -- -p always"
+    "deploy": "npm run electron:build -- -p always",
+    "deploy:win": "vue-cli-service electron:build -p always -w",
+    "electron:win": "vue-cli-service electron:build --windows"
   },
   "main": "background.js",
   "dependencies": {
