--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sweetalert2": "^10.3.5",
     "vue": "^2.6.11",
     "vue-crono": "^2.0.9",
+    "vue-online-2": "^2.2.0",
     "vue-router": "^3.2.0",
     "vue-select": "^3.11.2",
     "vuex": "^3.4.0",
