--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
-    "deploy:win": "vue-cli-service electron:build -p always -w",
+    "deploy": "vue-cli-service electron:build -p always -w",
     "build:win": "vue-cli-service electron:build --windows",
     "build:mac": "vue-cli-service electron:build --mac"
   },
