--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "GuateMusica",
-  "version": "1.0.20",
+  "version": "1.0.21",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -21,6 +21,7 @@
     "core-js": "^3.6.5",
     "electron-updater": "^4.3.5",
     "jquery": "^3.5.1",
+    "macaddress": "^0.5.1",
     "moment": "^2.29.0",
     "socket.io-client": "^2.3.1",
     "sweetalert2": "^10.3.5",
